ci(dependabot): set "maintenance" label on dependabot PRs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,5 @@ updates:
     schedule:
       interval: "daily"
     versioning-strategy: "increase-if-necessary"
+    labels:
+      - "maintenance"
