ci(dependabot): always increase versions in package.json

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,6 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-    versioning-strategy: "increase-if-necessary"
+    versioning-strategy: "increase"
     labels:
       - "maintenance"
