--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,16 +9,11 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node_version: [8, 10, 12]
-
     steps:
       - uses: actions/checkout@master
-      - name: Use Node.js ${{ matrix.node_version }}
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node_version }}
+          node-version: 12
       - name: Install
         run: npm ci
       - name: Test
