--- a/.github/workflows/update-prettier.yml
+++ b/.github/workflows/update-prettier.yml
@@ -1,11 +1,4 @@
-module.exports = createUpdatePrettierAction;
-
-const { writeFile } = require("fs").promises;
-
-async function createUpdatePrettierAction() {
-  await writeFile(
-    ".github/workflows/update-prettier.yml",
-    `name: Update Prettier
+name: Update Prettier
 on:
   push:
     branches:
@@ -22,12 +15,9 @@ jobs:
       - run: npm run lint:fix
       - uses: gr2m/create-or-update-pull-request-action@v1.x
         env:
-          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           title: "Prettier updated"
           body: "An update to prettier required updates to your code."
-          branch: \${{ github.ref }}
+          branch: ${{ github.ref }}
           commit-message: "style: prettier"
-`
-  );
-}
