--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "devDependencies": {
     "prettier": "^2.1.2",
     "semantic-release": "^17.1.2"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
   }
 }
