--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@octokit/auth-basic": "^1.4.6",
     "@octokit/core": "^3.1.2",
+    "camelcase": "^5.3.1",
     "execa": "^4.0.3",
     "inquirer": "^7.3.3",
     "spdx-license-list": "^6.3.0"
