ci(release): debug

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,3 +18,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.OCTOKITBOT_NPM_TOKEN }}
+      - run: npm whoami && npm access ls-collaborators
+        if: ${{ failure() }}
+        env:
+          NPM_TOKEN: ${{ secrets.OCTOKITBOT_NPM_TOKEN }}
