--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "test": "npm run lint"
   },
   "dependencies": {
+    "@octokit/auth-oauth-device": "^1.0.0",
     "@octokit/core": "^3.2.4",
     "camelcase": "^6.2.0",
+    "clipboardy": "^2.3.0",
     "execa": "^5.0.0",
     "inquirer": "^8.0.0",
     "prettier": "^2.2.1",
