build(package): simplify repository fields
created using @octoherd and https://github.com/gr2m/octoherd-script-normalize-package-repository-field

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": {
     "create-octokit-project": "create-octokit-project.js"
   },
-  "repository": "https://github.com/octokit/create-octokit-project.js",
+  "repository": "github:octokit/create-octokit-project.js",
   "keywords": [
     "npm-init"
   ],
