--- a/.github/workflows/add_to_octokit_project.yml
+++ b/.github/workflows/add_to_octokit_project.yml
@@ -3,6 +3,8 @@ name: Add PRs and issues to Octokit org project
 on:
   issues:
     types: [reopened, opened]
+  pull_request:
+    types: [reopened, opened]
   pull_request_target:
     types: [reopened, opened]
 
