feat: rewrite in ESM (#266)
BREAKING CHANGE: `create-octokit-project` is now a native ES Module

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-development",
   "description": "`npm init` script to create a new Octokit JS module (plugin, authentication strategy, or otherwise)",
   "main": "index.js",
+  "type": "module",
   "bin": {
     "create-octokit-project": "bin/create-octokit-project.js"
   },
@@ -21,10 +22,10 @@
   "dependencies": {
     "@octokit/auth-oauth-device": "^5.0.0",
     "@octokit/core": "^4.0.0",
-    "camelcase": "^6.3.0",
-    "clipboardy": "^2.3.0",
-    "execa": "^5.1.1",
-    "inquirer": "^8.2.4",
+    "camelcase": "^7.0.1",
+    "clipboardy": "^3.0.0",
+    "execa": "^7.1.1",
+    "inquirer": "^9.2.7",
     "prettier": "^2.7.1",
     "spdx-license-list": "^6.3.0"
   },
